syntax = "proto3";

service EmailSender {
	rpc SendEmail (EmailRequest) returns (EmailResponse);
}

message EmailRequest {
	string recipient = 1;
	string subject = 2;
	string body = 3;
}

message EmailResponse {
	string status = 1;
	string message = 2;
}